# backend

./: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 294740e49083_manually_add_transactions_currencies_.py  3ef7301bab9d_change_currency_column_to_enum_currency.py  545c9ac443b0_add_currencies_table.py  94dd7f108c4e_initial_migration.py
src/: config.py  database.py  dependencies.py  main.py  models.py  types.py
src/config/: __init__.py  app_settings.py  banks.py
src/dependencies/: __init__.py  currency_enum.py  service_getters.py
src/models/: __init__.py  api.py  currency.py  enums.py  exceptions.py  factories.py  schemas.py  transaction.py
src/parsers/: bac_parser.py  base_parser.py  promerica_parser.py
src/repositories/: currency_repository.py  generic_repository.py  transaction_repository.py
src/repositories/db/: expenses.example.pgsql  expenses.pgsql  period_expense_metrics.example.pgsql  period_expense_metrics.pgsql
src/routers/: __init__.py  currency.py  transactions.py
src/schemas/: __init__.py  api_response.py  currency.py  email.py  transaction.py
src/services/: __init__.py  currency_service.py  email_service.py  generic_service.py  memcache_service.py  transaction_service.py
src/utils/: __init__.py  decorators.py  dynamic_enum.py  hashing.py  pagination.py  response.py
